Change history
--------------

Release Candidate 3
===================

- Applied goodwill's patch fixing MR-305
  "fValidate fix a bug on unassociated label for element"

- Applied Oleg Snurnikov's patch fixing MR-306
  "PrototypeWebValidator - regular expression validation"

- Fixed MR-311 
  "The '\' character in templates goes unescaped when processed via NJS"

- The DefaultUrlBuilder now accepts a basePath parameter, which basically overrides the path information.

- Fixed MR-317
  "ARDataBind handles BelongsTo attribute in Nested component incorrectly."

- FlashBinderAttribute was removed as I doesnt work with the new 
  MonoRail design (changed to make the cache support work)

- Applied Tim Haines' patch adding TextAreaValue to FormHelper 

- Fixed MR-281 
  "View components params problem"

- Applied Markus Zywitza's patch adding a Fold method to TextHelper. 
  His description "Shortens a text to the specified length (using full words only and
adding an ellipsis at the end) and wraps it into a span-element that
has the title-property with the full text associated. This is
convenient for displaying properties in tables that might have very
much content (desription fields etc.) without destroying the table's
layout. Due to the title-property of the surrounding span-element, the
full text is displayed in the browser while hovering over the
shortened text."

- Applied Aaron Jensen's patch fixing MR-288
  "ApplicationPhysicalPath returns request path instead of / path"

- Fixed MR-284
  "MockServerUtility.MapPath throws NotImplementedException"

- Applied Bill Pierce's patch fixing MR-278
  "Add UrlDecode to IServerUtility"

- Applied Bryan Brown's patch fixing MR-273. This one adds a new attribute to 
  the routing configuration node: 'excludeAppPath'
  "Automatically handle ApplicationPath in the routing module"

- Applied goodwill's patch fixing MR-275
  "DefaultRailsEngineContext triggers RTE on ApplicationPhysicalPath 